search 관련 가오픈

--- a/static/index.html
+++ b/static/index.html
@@ -23,9 +23,9 @@
     <hr>
 
     <div role="search">
-        <form action="search.html" method="get" onclick="location.href = 'search.html';">
+        <form action="search.html" method="get" id="search_form">
             <div class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="무엇이든 찾아보세요" aria-label="검색창" name="search"
+                <input type="text" class="form-control" placeholder="무엇이든 찾아보세요" aria-label="검색창" name="q"
                        aria-describedby="search_btn">
                 <button class="btn btn-outline-secondary" type="button" id="clear_btn" aria-label="초기화"><i
                         class="fa-solid fa-times"></i></button>
