검색결과 새 창에서 열리도록 수정

--- a/static/search.html
+++ b/static/search.html
@@ -209,7 +209,7 @@
                 <div class="" style="" role="link">
                         <span class="h5">
                             <span class="badge bg-secondary" id="${id}-badge">${badge}</span>
-                            <a id="${id}-title" href="${url}">${title}</a>
+                            <a id="${id}-title" href="${url}" target="_blank">${title}</a>
                         </span>
                 </div>
                 <div class="text-muted" style="">
