--- a/static/index.html
+++ b/static/index.html
@@ -122,7 +122,7 @@
             </div>
 
             <div class="card mb-2 hstack gap-2" style="font-size: 1.4em; background-color: rgba(222,176,187,0.1)"
-                 onclick="location.href='https://miscthings.net'" role="button">
+                 onclick="location.href='/out/menu/miscthings_net/https://miscthings.net'" role="button">
                 <div class="ms-4 mt-2 mb-2">
                     <span><i class="fa-solid fa-people-group"></i>&nbsp; MiscThings 소개</span>
                 </div>
