--- a/static/fragment/banner_new.html
+++ b/static/fragment/banner_new.html
@@ -1,7 +1,7 @@
 <div class="card mb-2 rounded"
      style="font-size: 1.2em;"
      role="banner">
-    <a href="https://quiz.miscthings.net" target="_blank">
+    <a href="/out/campaign/1025_quiz/https://quiz.miscthings.net" target="_blank">
         <img src="/static/image/sweda_1.png" class="rounded" alt="" style="width: 100%">
     </a>
 </div>
