--- a/static/fragment/banner_new.html
+++ b/static/fragment/banner_new.html
@@ -8,16 +8,16 @@
 <div class="card mb-2 hstack gap-2" style="font-size: 1.2em; background-color: rgba(211,211,211,0.47)"
      onclick="alert_2();" role="button">
     <div class="ms-4 mt-2 mb-2">
-        <span>[버그] 강의실 이름 변경 문제</span>
+        <span>[안내] 마음에 드셨다면 추천해주세요!</span>
     </div>
     <div class="ms-auto me-4">
-        <i class="fa-solid fa-triangle-exclamation"></i>
+        <i class="fa-solid fa-heart"></i>
     </div>
 </div>
 
 <script>
 
     function alert_2() {
-        alert(`강의실 이름 변경이 안되는 문제가 있습니다.\n변경이 안될 경우 문의란에 연락처와 함께 문의해주세요. 신속히 수정해 드립니다.`);
+        alert(`현재 MiscThings 팀원 중 대부분은 취업이나 입대로 서비스 테스트가 어렵습니다. 적극적인 버그 제보를 부탁드리며 서비스가 마음에 드셨다면 지인에게 추천 부탁드립니다. 대구대 정책이 바뀌지 않는 한 서비스를 지속할 수 있도록 노력하겠습니다. 감사합니다!`);
     }
 </script>
