--- a/static/login.html
+++ b/static/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="sentry-trace" content="{{ trace }}"/>
-    <title>DU Attend v2</title>
+    <title>DU Attend v2.1</title>
     {% include 'fragment/header.html' %}
     <style>
         .mt-1 {
@@ -59,7 +59,7 @@
                         href="https://ko.wikipedia.org/wiki/%EC%95%94%ED%98%B8%ED%99%94_%ED%95%B4%EC%8B%9C_%ED%95%A8%EC%88%98">단방향
                     해시</a>하여 저장합니다. 관리자도 해독할 수 없습니다.
                 </li>
-                <li><a href="https://resetpw.miscthings.net/new" target="_blank">패스워드 분실 문의 <i
+                <li><a href="password_reset.html" target="_blank">패스워드 분실 문의 <i
                         class="fa-solid fa-arrow-up-right-from-square"></i></a></li>
             </ul>
         </div>
