--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="sentry-trace" content="{{ trace }}"/>
-    <title>DU Attend v2</title>
+    <title>DU Attend v2.1</title>
 
     {% include 'fragment/header.html' %}
     <!--    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>-->
@@ -19,7 +19,7 @@
 <body>
 
 <div class="container mt-3">
-    <h1 style="text-align: center;">DU Attend V2</h1>
+    <h1 style="text-align: center;">DU Attend v2.1</h1>
     <hr>
 
     <div role="search">
