--- a/static/fragment/banner_new.html
+++ b/static/fragment/banner_new.html
@@ -5,19 +5,27 @@
         <img src="/static/image/sweda_1.png" class="rounded" alt="" style="width: 100%">
     </a>
 </div>
-<div class="card mb-2 hstack gap-2" style="font-size: 1.2em; background-color: rgba(211,211,211,0.47)"
-     onclick="alert_2();" role="button">
+<div class="card mb-2 hstack gap-2" style="font-size: 1.2em; background-color: rgba(211,211,211,0.47)"role="button">
     <div class="ms-4 mt-2 mb-2">
-        <span>[안내] 마음에 드셨다면 추천해주세요!</span>
+        <span>[9/1 업데이트] 대구대전자출결 앱 업데이트로 인해 출결 URL이 수정되었습니다.</span>
     </div>
     <div class="ms-auto me-4">
         <i class="fa-solid fa-heart"></i>
     </div>
 </div>
+<!--<div class="card mb-2 hstack gap-2" style="font-size: 1.2em; background-color: rgba(211,211,211,0.47)"-->
+<!--     onclick="alert_2();" role="button">-->
+<!--    <div class="ms-4 mt-2 mb-2">-->
+<!--        <span>[안내] 마음에 드셨다면 추천해주세요!</span>-->
+<!--    </div>-->
+<!--    <div class="ms-auto me-4">-->
+<!--        <i class="fa-solid fa-heart"></i>-->
+<!--    </div>-->
+<!--</div>-->
 
-<script>
+<!--<script>-->
 
-    function alert_2() {
-        alert(`현재 MiscThings 팀원 중 대부분은 취업이나 입대로 서비스 테스트가 어렵습니다. 적극적인 버그 제보를 부탁드리며 서비스가 마음에 드셨다면 지인에게 추천 부탁드립니다. 대구대 정책이 바뀌지 않는 한 서비스를 지속할 수 있도록 노력하겠습니다. 감사합니다!`);
-    }
-</script>
+<!--    function alert_2() {-->
+<!--        alert(`현재 MiscThings 팀원 중 대부분은 취업이나 입대로 서비스 테스트가 어렵습니다. 적극적인 버그 제보를 부탁드리며 서비스가 마음에 드셨다면 지인에게 추천 부탁드립니다. 대구대 정책이 바뀌지 않는 한 서비스를 지속할 수 있도록 노력하겠습니다. 감사합니다!`);-->
+<!--    }-->
+<!--</script>-->
