테스트 및 클로드 기록 추가

--- a/static/fragment/footer.html
+++ b/static/fragment/footer.html
@@ -1,11 +1,11 @@
-<div class="copyleft" style="padding-left: 0.5em; padding-right: 0.5em ">
+<div class="copyleft" style="padding-left: 0.5em; padding-right: 0.5em; line-height: 1.5;">
     <hr>
     2022.
     <a target="_blank" href="https://works.miscthings.net">
-        <i class="fa-solid fa-people-group"></i> MiscThings</a>,
-    <a href="/static/introduce.html"><i class="fa-regular fa-circle-question"></i> 사용법</a>,
-    <a href="/static/report.html"><i class="fa-solid fa-bullhorn"></i> 의견·문의</a>,
-    <a href="/"><i class="fa-solid fa-house"></i> 홈으로</a>
+        <i data-lucide="users"></i> MiscThings</a>,
+    <a href="/static/introduce.html"><i data-lucide="help-circle"></i> 사용법</a>,
+    <a href="/static/report.html"><i data-lucide="megaphone"></i> 의견·문의</a>,
+    <a href="/"><i data-lucide="home"></i> 홈으로</a>
 </div>
 
 <div class="copyleft mb-5" style="margin-top: 0.2em !important;">
