--- a/static/introduce.html
+++ b/static/introduce.html
@@ -52,14 +52,14 @@
         <h2>의견·문의</h2>
         <div>
             <ul>
-                <li><a target="_blank" href="/static/password_reset.html">패스워드 분실 문의 <i class="fa-solid fa-arrow-up-right-from-square"></i></a></li>
-                <li><a target="_blank" href="/static/report.html" >제보·문의·의견(로그인 필요) <i class="fa-solid fa-arrow-up-right-from-square"></i></a></li>
+                <li><a target="_blank" href="/static/password_reset.html">패스워드 분실 문의 <i data-lucide="external-link"></i></a></li>
+                <li><a target="_blank" href="/static/report.html" >제보·문의·의견(로그인 필요) <i data-lucide="external-link"></i></a></li>
             </ul>
         </div>
 
 
         <h2>만든이</h2>
-        <span>MiscThings 동아리 → <a href="https://works.miscthings.net/" target="_blank">works.miscthings.net <i class="fa-solid fa-arrow-up-right-from-square"></i></a></span>
+        <span>MiscThings 동아리 → <a href="https://works.miscthings.net/" target="_blank">works.miscthings.net <i data-lucide="external-link"></i></a></span>
         <div>
             <ul>
                 <li><span onclick="alert('이승욱')">승우기</span>: 프론트엔드, 테스트, 교정, 홍보</li>
