--- a/static/login.html
+++ b/static/login.html
@@ -60,7 +60,7 @@
                     해시</a>하여 저장합니다. 관리자도 해독할 수 없습니다.
                 </li>
                 <li><a href="password_reset.html" target="_blank">패스워드 분실 문의 <i
-                        class="fa-solid fa-arrow-up-right-from-square"></i></a></li>
+                        data-lucide="external-link"></i></a></li>
             </ul>
         </div>
 
