--- a/static/fragment/banner_new.html
+++ b/static/fragment/banner_new.html
@@ -1,16 +1,17 @@
-<div class="card mb-2 rounded"
-     style="font-size: 1.2em;"
-     role="banner">
-    <a href="/out/campaign/1025_quiz/https://quiz.miscthings.net" target="_blank">
-        <img src="/static/image/sweda_1.png" class="rounded" alt="" style="width: 100%">
-    </a>
-</div>
-<div class="card mb-2 hstack gap-2" style="font-size: 1.2em; background-color: rgba(211,211,211,0.47)"role="button">
+<!--<div class="card mb-2 rounded"-->
+<!--     style="font-size: 1.2em;"-->
+<!--     role="banner">-->
+<!--    <a href="/out/campaign/1025_quiz/https://quiz.miscthings.net" target="_blank">-->
+<!--        <img src="/static/image/sweda_1.png" class="rounded" alt="" style="width: 100%">-->
+<!--    </a>-->
+<!--</div>-->
+<div class="card mb-2 hstack gap-2" style="font-size: 1.2em; background-color: rgba(211,211,211,0.47)" role="button"
+     onclick="n1();">
     <div class="ms-4 mt-2 mb-2">
-        <span>[9/1 업데이트] 대구대전자출결 앱 업데이트로 인해 출결 URL이 수정되었습니다.</span>
+        <span>[업데이트] 3/29 UI 개선</span>
     </div>
     <div class="ms-auto me-4">
-        <i class="fa-solid fa-heart"></i>
+        <i data-lucide="heart"></i>
     </div>
 </div>
 <!--<div class="card mb-2 hstack gap-2" style="font-size: 1.2em; background-color: rgba(211,211,211,0.47)"-->
@@ -23,9 +24,60 @@
 <!--    </div>-->
 <!--</div>-->
 
-<!--<script>-->
+<script>
 
-<!--    function alert_2() {-->
-<!--        alert(`현재 MiscThings 팀원 중 대부분은 취업이나 입대로 서비스 테스트가 어렵습니다. 적극적인 버그 제보를 부탁드리며 서비스가 마음에 드셨다면 지인에게 추천 부탁드립니다. 대구대 정책이 바뀌지 않는 한 서비스를 지속할 수 있도록 노력하겠습니다. 감사합니다!`);-->
-<!--    }-->
-<!--</script>-->
+    function n1(){
+        let t = `3/29 UI 개선`;
+        let m = `
+        DU Attend V2 를 이용해 주셔서 감사합니다.<br>
+        몇개 방치된 문제를 수정했습니다. 다른 불편한 사항이 있으시면 의견/문의란에 남겨주세요.<br>
+        <br>
+        <ul>
+        <li>
+            아이콘 문제 수정
+            <ul>
+                <li>월 말에 아이콘이 사라지고 월 초에 다시 나타나는 문제를 수정했습니다.</li>
+            </ul>
+        </li>
+        <li>
+            폰트 문제 수정
+            <ul>
+                <li>시스템 기본 폰트가 보이는 문제를 수정했습니다.</li>
+            </ul>
+        </li>
+
+        </ul>
+
+`;
+        showNotice(t, m);
+
+    }
+
+    function showNotice(title, message) {
+        // 모달 제목과 내용 설정
+        document.getElementById('noticeModalLabel').textContent = title;
+        document.getElementById('noticeModalBody').innerHTML = message;
+
+        // 모달 표시
+        var noticeModal = new bootstrap.Modal(document.getElementById('noticeModal'));
+        noticeModal.show();
+    }
+</script>
+
+<!-- 공지사항 모달 -->
+<div class="modal" id="noticeModal" tabindex="-1" aria-labelledby="noticeModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="noticeModalLabel">공지사항</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body" id="noticeModalBody">
+        <!-- 모달 내용이 여기에 표시됩니다 -->
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
+      </div>
+    </div>
+  </div>
+</div>
